Trabalho Final -  O Jogo
Trabalho Final -  O Jogo

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /EstruturaDeDadosLineares/nbproject/private/
 /EstruturaDeDadosLineares/build/
+/Projeto_OJogo/nbproject/private/
+/PrimeiroPrograma/nbproject/private/
+/Projeto_OJogo/build/
